--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<a href="https://garaix-davy.github.io/01-JavaScript/">Coding Topic 01 - JavaScript</a>
 </body>
 </html>
+
