--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Coding Topics - CIT 261</h1>
 <a href="https://garaix-davy.github.io/01-JavaScript/">Coding Topic 01 - JavaScript</a>
+<a href="https://garaix-davy.github.io/05-Local-Storage/">Coding Topic 05 - Local Storage</a>
 </body>
 </html>
