--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 <a href="https://garaix-davy.github.io/01-JavaScript/">Coding Topic 01 - JavaScript</a>
 <br>
 <a href="https://garaix-davy.github.io/05-Local-Storage/">Coding Topic 05 - Local Storage</a>
+<br>
+<a href="https://garaix-davy.github.io/07-CCS-Class-Properties/">Coding Topic 07 - CSS Class Properties</a>
 </body>
 </html>
