--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <a href="https://garaix-davy.github.io/05-Local-Storage/">Coding Topic 05 - Local Storage</a>
 <br>
 <a href="https://garaix-davy.github.io/07-CSS-Class-Properties/">Coding Topic 07 - CSS Class Properties</a>
+<br>
+<a href="https://garaix-davy.github.io/10-HTML5-Tags/">Coding Topic 10 - HTML 5 Tags</a>
 </body>
 </html>
