--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <a href="https://garaix-davy.github.io/07-CSS-Class-Properties/">Coding Topic 07 - CSS Class Properties</a>
 <br>
 <a href="https://garaix-davy.github.io/10-HTML5-Tags/">Coding Topic 10 - HTML 5 Tags</a>
+<br>
+<a href="https://garaix-davy.github.io/13-CSS3-Animations/">Coding Topic 13 - CSS3 Animations</a>
 </body>
 </html>
