--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
 <h1>Coding Topics - CIT 261</h1>
 <a href="https://garaix-davy.github.io/01-JavaScript/">Coding Topic 01 - JavaScript</a>
 <br>
+<a href="https://garaix-davy.github.io/02-JavaScript-Objects/">Coding Topic 02 - JavaScript Objects</a>
+<br>
+<a href="https://garaix-davy.github.io/03-JSON/">Coding Topic 03 - JSON</a>
+<br>
+<a href="https://garaix-davy.github.io/04-AJAX/">Coding Topic 04 - AJAX</a>
+<br>
 <a href="https://garaix-davy.github.io/05-Local-Storage/">Coding Topic 05 - Local Storage</a>
+<br>
+<a href="https://garaix-davy.github.io/06-DOM-Manipulation/">Coding Topic 6 - DOM Manipulation</a>
 <br>
 <a href="https://garaix-davy.github.io/07-CSS-Class-Properties/">Coding Topic 07 - CSS Class Properties</a>
 <br>
+<a href="https://garaix-davy.github.io/08-CSS3-Transitions-Animations/">Coding Topic 8 - CSS3 Transitions and Animations</a>
+<br>
+<a href="https://garaix-davy.github.io/09-JavaScript-Events/">Coding Topic 9 - JavaScript Events</a>
+<br>
 <a href="https://garaix-davy.github.io/10-HTML5-Tags/">Coding Topic 10 - HTML 5 Tags</a>
+<br>
+<a href="https://garaix-davy.github.io/11-CSS3-Transitions/">Coding Topic 11 - CSS3 Transitions</a>
+<br>
+<a href="https://garaix-davy.github.io/12-CSS3-Transforms/">Coding Topic 12 - CSS3 Transforms</a>
 <br>
 <a href="https://garaix-davy.github.io/13-CSS3-Animations/">Coding Topic 13 - CSS3 Animations</a>
 </body>
