--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<meta charset="utf-8">
+	<title>CIT 261 Coding Topics</title>
+
+<link rel="stylesheet" type="text/css" href="css/style.css">
+
+</head>
+
 <body>
 <h1>Coding Topics - CIT 261</h1>
 <a href="https://garaix-davy.github.io/01-JavaScript/">Coding Topic 01 - JavaScript</a>
