--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <br>
 <a href="https://garaix-davy.github.io/02-JavaScript-Objects/">Coding Topic 02 - JavaScript Objects</a>
 <br>
-<a href="https://garaix-davy.github.io/03-JSON/">Coding Topic 03 - JSON</a>
-<br>
-<a href="https://garaix-davy.github.io/04-AJAX/">Coding Topic 04 - AJAX</a>
+<a href="https://garaix-davy.github.io/04-AJAX/">Coding Topic 03 - JSON & Coding Topic 04 - AJAX</a>
 <br>
 <a href="https://garaix-davy.github.io/05-Local-Storage/">Coding Topic 05 - Local Storage</a>
 <br>
